<resources>
    <string name="app_name">Home 5 Rounds</string>

    <string name="title_upper_plan">Plan A</string>
    <string name="l_squat">Squats</string>
    <string name="l_push">Push Ups</string>
    <string name="l_back">Back Dips</string>
    <string name="l_fly">3 Flies</string>
    <string name="l_raise">Leg Raises</string>
    <string name="l_i_squat">Iso. Squats</string>
    <string name="l_calf">Calf Raises</string>

    <string name="title_lower_plan">Plan B</string>
    <string name="l_diamond">D. Pushes</string>

    <string name="button_10">10</string>
    <string name="button_15">15</string>
    <string name="button_20">20</string>
    <string name="button_iso">40 s</string>
</resources>
