<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/upper_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/up_push"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_push"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />
        </TableRow>

        <TableRow
            android:id="@+id/up_diam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_diamond"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button29"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button30"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button31"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button32"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

        </TableRow>

        <TableRow
            android:id="@+id/up_raises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_raise"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button26"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button27"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

        </TableRow>

        <TableRow
            android:id="@+id/up_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_back"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button17"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />
        </TableRow>

        <TableRow
            android:id="@+id/up_squat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_squat"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_10" />
        </TableRow>

        <TableRow
            android:id="@+id/up_calf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_calf"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button39"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_20" />

            <Button
                android:id="@+id/button40"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_20" />

            <Button
                android:id="@+id/button41"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_20" />

            <Button
                android:id="@+id/button42"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_20" />

            <Button
                android:id="@+id/button43"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_20" />
        </TableRow>

        <TableRow
            android:id="@+id/up_fly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D5ADADAD">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/l_fly"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button19"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:onClick="goneButton"
                android:text="@string/button_15" />

        </TableRow>
    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper_table"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>